# yarn-epr

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
backend/: .env.example  pyproject.toml
backend/integration_tests/: database_test_support.py  test_migrated_warehouse_schema.py  test_register_bale_reception.py  test_register_raw_material_reception.py  test_warehouse_transaction.py
backend/shared/domain/user/: __init__.py  events.py  user.py  value_objects.py
backend/src/bootstrap/: __init__.py  database_session_dependency.py  http_application.py  warehouse_bale_dependency.py
backend/src/infra/persistence/: database_engine.py  database_session_factory.py  database_settings.py  record_registry.py
backend/src/warehouse/: __init__.py
backend/src/warehouse/application/: __init__.py  raw_material_reception_errors.py  raw_material_reception_input.py  raw_material_reception_result.py  register_raw_material_reception.py
backend/src/warehouse/domain/: __init__.py
backend/src/warehouse/ports/: __init__.py  identity_generator.py  raw_material_bale_repository.py  raw_material_reception_repository.py  warehouse_transaction.py  warehouse_transaction_errors.py
backend/tests/test_bootstrap/: test_http_application.py
backend/tests/test_infra/persistence/: test_database.py
backend/tests/test_warehouse/application/: test_register_bale_reception.py  test_register_raw_material_reception.py
backend/tests/test_warehouse/domain/: test_bale.py  test_bale_reception.py  test_raw_material_bale.py  test_raw_material_reception.py  test_value_objects.py
(+215 files in other folders)
